--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 	<description>Demo project for Spring Boot application to deploy in gke cluster</description>
 	<properties>
 		<java.version>11</java.version>
+		<docker.image.prefix>spring-boot-docker</docker.image.prefix>
+		<docker.image.exposed.port>8080</docker.image.exposed.port>
+		<docker.image.dockerfile.dir>${basedir}</docker.image.dockerfile.dir>
+		<docker.image.dockerize.version>v0.6.1</docker.image.dockerize.version>
+		<docker.plugin.version>1.2.0</docker.plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +51,17 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.12</version>
+				<configuration>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<buildArgs>
+						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
 				</configuration>
 			</plugin>
 		</plugins>
