--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,11 @@
 		<docker.image.dockerfile.dir>${basedir}</docker.image.dockerfile.dir>
 		<docker.image.dockerize.version>v0.6.1</docker.image.dockerize.version>
 		<docker.plugin.version>1.2.0</docker.plugin.version>
+
 		<gcp-project-name>example-project-gke</gcp-project-name>
 		<image-name>employee-service</image-name>
+		<image-version>v1.0</image-version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -72,7 +75,7 @@
 				<version>2.8.0</version>
 				<configuration>
 					<to>
-						<image>gcr.io/${gcp-project-name}/${image-name}</image>
+						<image>gcr.io/${gcp-project-name}/${image-name}:${image-version}</image>
 					</to>
 				</configuration>
 			</plugin>
